Fixed z-index issue

--- a/static_content/css/style.css
+++ b/static_content/css/style.css
@@ -408,6 +408,7 @@ font-size: 20px;
 	display: block;
 	background-color: white;
 	transition: all 1s;
+	z-index:200;
 }
 
 .botContainerActive{
